Actions
Bug #10078
closedsmatch fixes for UCB
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
We don't care too much about UCB, so turn smatch off pretty much all over here
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit cadd68ea0014761eda6a293664086dfa80686d85
commit cadd68ea0014761eda6a293664086dfa80686d85 Author: John Levon <john.levon@joyent.com> Date: 2019-01-14T18:05:55.000Z 10078 smatch fixes for UCB Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions